--- a/trunk/Specify/help/SpecifyHelp/Workbench/DataSetSummary.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/DataSetSummary.html
@@ -8,7 +8,7 @@
 <body>
 <h2>Data Set Summary</h2>
 <hr>
-<p>The Data Set Summary report counts and groups  'like' values in a single column, then displays them in the report in descending order. This provides an easy way to find spelling errors as well as giving  an overview of the values for any given column. </p>
+<p>The Data Set Summary report groups and counts and groups  unique items and displays them  in descending alphanumeric order. This provides   an overview of the values for any given column as well as a mechanism for checking the integrity of the data. </p>
 <p>The easiest way to create a Data Set Summary report is to 'drag and drop' a Data Set  onto  the Data Set Summary action on the sidebar. This eliminates the need to choose a Data Set for the report. </p>
 <p>Or, click the Data Set Summary action on the Sidebar. A file dialog will appear to choose a Data Set for the report. </p>
 <p> Next, choose a column  for the report: </p>
@@ -17,7 +17,6 @@
 <p>&nbsp;</p>
 <p>Select a column and click 'OK'. The report will open in the Workspace. </p>
 <p>&nbsp;</p>
-<p>The following image is an example of a Data Set Summary report:</p>
 <p align="center"><img src="../images/DataSetsummary.png" ></p>
 <p align="center" class="imgcaption">Data Set Summary Report </p>
 <p>&nbsp;</p>
