--- a/trunk/Specify/help/SpecifyHelp/Workbench/ExportExcelTemplate.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ExportExcelTemplate.html
@@ -9,7 +9,7 @@
 <h2>Export MS Excel Template</h2>
 <hr>
 <p>The WorkBench is a staging area for pre-cataloged collections data  and is not intended as a replacement for editing  MS Excel row and column data. However, when creating MS Excel spreadsheets, it is recommended that the column headings match the Specify 6 fields. This will ensure that the data will import correctly into  the WorkBench and ultimately into Specify 6. To streamline this process, the WorkBench allows Data Set column headings to be exported as an MS Excel Template. </p>
-<p>The WorkBench will not allow an open Data Set to be exported. If a Data Set is disabled in the Sidebar it must be closed in the Workspace before it can be exported. </p>
+<p>The WorkBench will not allow the export of a template being used by a Data Set. If a Data Set is disabled (greyed out) in the Sidebar it must be closed in the Workspace before it can be exported. </p>
 <p>The fastest way to export the Data Set column headings is to 'drag and drop' the Data Set item onto the 'Export Excel Template' action in the Sidebar. This eliminates the need to choose a Data Set  to export. </p>
 <p>Or, click the 'Export Excel Template' action in the Sidebar. The following dialog will appear listing the unopened Data Sets:</p>
 <p align="center"><img src="../images/exportmsexcel.png"></p>
