--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
@@ -7,7 +7,8 @@
 <body>
 <h2>Importing Data from a CSV file </h2>
 <hr>
-<p>The WorkBench can easily import data from a CSV (comma separated value) file into a new Data Set. </p>
+<p>The WorkBench can easily import data from a CSV (comma separated value or comma delimited text) file into a new Data Set. </p>
+<p><em><strong>Note:</strong></em> Changes made to the data in the WorkBench will not be reflected in the original MS Excel file.</p>
 <p>To begin, click on the Import Data action on the Sidebar and choose the import file in the file dialog. </p>
 <p>The following information dialog will open: </p>
 <p align="center"><img src="../images/badcsvimport.png" alt="Bad Import"></p>
