--- a/trunk/Specify/help/SpecifyHelp/Workbench/SpecialTools.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/SpecialTools.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <td width="8%"><img src="../images/map.png" alt="map" width="32" height="32"></td>
-      <td width="16%">Map</td>
+      <td width="16%">Record Mapping Tool </td>
       <td width="60%">Displays  the Latitude and Longitude points as a green dot on a satellite map. The map includes rivers and political boundary overlays. </td>
       <td width="16%"><p>Latitude1 </p>
         <p>Longitude1 </p>
@@ -36,7 +36,7 @@
     <tr>
       <td><img src="../images/biogeomancer.png" alt="BioGiomancer" width="32" height="32"></td>
       <td>BioGiomancer</td>
-      <td>The WorkBench uses this web service to calculate the latitude and longitude positions from a textual locality description and three geography fields. The WorkBench processes all the selected rows and caches the information, and then the results can be stepped through one row at a time and the appropriate Latitude / Longitude can be selected, or the the results can be skipped. Note: The WorkBench is not responsible for any of the results returned by BioGeomancer, the WorkBench is integrated with the the BioGeomancer web service to make it easy to collect the results.</td>
+      <td>The WorkBench uses this web service to calculate the latitude and longitude positions from a textual locality description and three geography fields. The WorkBench processes all the selected rows and caches the information, and then the results can be stepped through one row at a time and the appropriate Latitude / Longitude can be selected, or skipped. <em><strong>Note:</strong></em> The WorkBench is not responsible for any of the results returned by BioGeomancer, the WorkBench is integrated with the the BioGeomancer.</td>
       <td><p>LocalityName</p>
       <p>Country</p>
       <p>State</p>
@@ -48,7 +48,7 @@
       <td><p>Latitude/</p>
       <p>Longitude </p>
       <p>Converter </p></td>
-      <td>Converts Latitude/Longitude formats within a Data Set. It can  replace the original format or keep the original and store the new format in the Lat1Text and Long1Text fields. </td>
+      <td>The Latitude/Longitude Converter tool converts numerous georeference formats within the Latitude1 and Longitude1 columns of a Data Set into decimal degrees (DD.DDDD), degrees decimal minutes (DD MM.MM) or degrees minutes seconds (DD MM SS.SS). Original values will be replaced with the new converted values. In order to keep the original format the Data Set must include the Lat1Text and Long1Text columns. </td>
       <td><p>Latitude 1</p>
       <p>Longitude 1</p>
       <p>(Lat1Text and Long1Text to keep original Lat/Long formats.   </p></td>
