--- a/trunk/Specify/help/SpecifyHelp/Workbench/WorkingWithImages.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/WorkingWithImages.html
@@ -12,11 +12,14 @@
 <p>The Image Window displays linked images and provides additional functionality for working with the images. </p>
 <p>It is important to understand that the WorkBench does not relocate or store  image files within Data Sets. The WorkBench  creates a link to the image location. The WorkBench does create a smaller version, or thumbnail, of the image, but it is not a replacement for the original image. The original image should never be deleted or moved. The WorkBench displays the thumbnail image in the Image Window by default but the original image can be displayed by using the <a href="#imagemenu">Image Menu</a>. </p>
 <p>The WorkBench can only link a single image to each record.</p>
+<p><strong><em>Note:</em></strong> Images may not exceed 16 MB. </p>
 <h3><u><a name="ImageWindow" id="ImageWindow"></a>Image Toggle</u> </h3>
 <p>The image window is toggled on and off by clicking the <img src="../images/Image-Window-B-16x16.png" alt="image" width="16" height="16"> (Image Window) button in the Workspace Item Bar. When an image window is toggled 'on' an 'Image' column appears in the Data Set, which includes  an <img src="../images/Image-Window-B-16x16.png" alt="image" width="16" height="16"> (image) icon for those records that are linked to an image. </p>
+<p>The Image Window will open on the side of the WorkBench window that allows the most space on the screen. The Image Window may overlap the WorkBench window if the screen does not allow enough space for both to exist side-by-side. The Image Window default setting is 'always on top'. This can be changed in the <a href="#imagemenu">Image Menu</a>.</p>
 <p>&nbsp;</p>
 <h3><u>Link Image</u> </h3>
 <p>The Image Toggle button can also be used to link a single image to a record. </p>
+<p>All the above also goes for the 'Show Map of selected Rows' window except for the stuff about being able to change AlwaysOnTop.</p>
 <p>First select a record, then click the <img src="../images/Image-Window-B-16x16.png" alt="image" width="16" height="16"> (Image Window)  button to activate the Image Window. </p>
 <p align="center"><img src="../images/imagewindow.png" alt="image window"></p>
 <p align="center" class="imgcaption">Image Window </p>
@@ -42,31 +45,31 @@
 <table width="75%" border="1">
   <tr>
     <td width="18%">Close</td>
-    <td width="82%">Closes  the Image Window </td>
+    <td width="82%">Closes  the Image Window.</td>
   </tr>
   <tr>
     <td>Reduced Size </td>
-    <td>Displays the Image thumbnail </td>
+    <td>Displays the Image thumbnail. </td>
   </tr>
   <tr>
     <td>Original Size </td>
-    <td>Displays the original image </td>
+    <td>Displays the original image in full resolution. </td>
   </tr>
   <tr>
     <td>Keep Window on Top </td>
     <td>Keeps  the Image Window displayed on top of the WorkBench. </td>
   </tr>
   <tr>
-    <td>Clear</td>
-    <td>Unlinks the image from the record </td>
+    <td>Delete Link </td>
+    <td>Unlinks the image from the record. </td>
   </tr>
   <tr>
-    <td>Replace</td>
-    <td>Replaces the image with another image </td>
+    <td>Replace Image </td>
+    <td>Opens a dialog to choose a new image to link to the record. </td>
   </tr>
   <tr>
     <td>Image Window </td>
-    <td>Opens the Image Window section of WorkBench Help </td>
+    <td>Opens the Image Window section of the WorkBench Help. </td>
   </tr>
 </table>
 <p>&nbsp; </p>
