--- a/trunk/Specify/help/SpecifyHelp/Workbench/FormEditing.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/FormEditing.html
@@ -7,39 +7,39 @@
 <h2>Form Editing</h2>
 <hr>
 <font size="-2"><br></font>
-<p><span class="index">Form Editing</span> enables the Data Set rows to be  displayed and edited row by row (record by record). Each column heading  has an accompanying User Interface (UI) control (text field, text area, or check box) for entering data. </p>
+<p><span class="index">Form Editing</span> enables the Data Set rows to be  displayed and edited row by row (record by record). Column headings are referred to as 'labels' in the Form view. Each label  has an accompanying User Interface (UI) control (text field, text area, or check box) for entering data. </p>
 <p>Values within a Data Set are easily manipulated using the icons in the Workspace Item Bar:</p><br>
 
 <table border="1">
   <tr>
     <td rowspan="6">Record Number Control </td>
     <td>l&lt;</td>
-    <td>Go to the  first record </td>
+    <td>Go to the  first record. </td>
   </tr>
   <tr>
     <td>&lt;</td>
-    <td>Go to the  previous record </td>
+    <td>Go to the  previous record. </td>
   </tr>
   <tr>
     <td>&gt;</td>
-    <td>Go to the  next record </td>
+    <td>Go to the  next record. </td>
   </tr>
   <tr>
     <td>&gt;l</td>
-    <td>Go to the  last record </td>
+    <td>Go to the  last record. </td>
   </tr>
   <tr>
     <td><img src="../images/AddNewRecord16x16.png" width="16" height="16"></td>
-    <td>Add a record </td>
+    <td>Add a record. </td>
   </tr>
   <tr>
     <td><img src="../images/RemoveRecord16x16.png" width="16" height="16"></td>
-    <td>Delete a record </td>
+    <td>Delete a record. </td>
   </tr>
   <tr>
     <td><span class="index">Edit Form Properties</span></td>
     <td><img src="../images/EditProperties16x16.png" width="16" height="16"></td>
-    <td>Allows the columns to be resized, moved and renamed. See <a href="#formcontrol">Edit Form Properties</a></td>
+    <td>Allows the columns to be resized, moved and renamed. See <a href="#formcontrol">Edit Form Properties.</a></td>
   </tr>
   <tr>
     <td><span class="index">Image Window</span></td>
@@ -57,7 +57,7 @@
     <td>Displays the Data Set in a  grid view (resembling a spreadsheet). Data Sets always open in this view. </td>
   </tr>
 </table>
-<p>The column headings and UI controls can be moved and repositioned on the form with a click and drag. </p>
+<p>The labels and UI controls can be moved and repositioned on the form with a click and drag. </p>
 <p>UI controls can be activated by clicking in them, or using the tab key to navigate between them. The tab order is top left to bottom right by default. </p>
 <p>&nbsp;</p>
 <h3><a name="formcontrol"></a><u>Edit Form  Properties</u></h3>
@@ -77,7 +77,7 @@
   </tr>
   <tr>
     <td>Label</td>
-    <td>Sets the column heading. This will change the original column heading in the Data Set Mapping. </td>
+    <td>Sets the label. This will change the original column heading in the Data Set Mapping. </td>
   </tr>
   <tr>
     <td>Number of Rows </td>
@@ -85,8 +85,8 @@
   </tr>
   <tr>
     <td>Field Type </td>
-    <td><p>Text Field: limits the text area to one row </p>
-      <p>Text Area:  allows the text area to expand to more than one row and activates the Number of Rows field </p></td>
+    <td><p>Text Field: limits the text area to one row. </p>
+      <p>Text Area:  allows the text area to expand to more than one row and activates the Number of Rows field. </p></td>
   </tr>
   <tr>
     <td>Field Columns </td>
@@ -107,11 +107,11 @@
 </table>
 <h3>&nbsp;</h3>
 <h3><u><a name="Carry_Forward"></a>Carry Forward</u></h3>
-<p><span class="index">Carry Forward</span> enables the value in one or more columns  to be 'carried forward', or copied to the next new row of data. To select the columns to be carried forward click  the <img src="../images/Configure16x16.png" alt="configure" width="16" height="16"> (carry forward) button. The following configuration window will open: </p>
+<p><span class="index">Carry Forward</span> enables the value in one or more labels  to be 'carried forward', or copied to the next new row of data. To select the label to be carried forward click  the <img src="../images/Configure16x16.png" alt="configure" width="16" height="16"> (carry forward) button. The following configuration window will open: </p>
 <p align="center"><img src="../images/carryforwardscr.png" alt="Carry Forward"><br>
     <span class="imgcaption">Configure Carry Forward </span></p>
 <p>&nbsp;</p>
-<p>The values in the selected column(s) are 'carried forward' into  new rows, (new rows are added by clicking the <img src="../images/AddNewRecord16x16.png" alt="add" width="16" height="16"> button), until Carry Forward is reset. </p>
+<p>The values in the selected label(s) are 'carried forward' into  new rows, (new rows are added by clicking the <img src="../images/AddNewRecord16x16.png" alt="add" width="16" height="16"> button), until Carry Forward is reset. </p>
 <p>&nbsp;</p>
 <h3><u>Form Editing Examples</u></h3>
 <p><u>Delete a Record(s):</u></p>
@@ -127,7 +127,7 @@
 <p><u>Add a Record with Preset Values:</u></p>
 <ol>
   <li>Click  the <img src="../images/Configure16x16.png" alt="configure" width="16" height="16"> button</li>
-  <li>Select the fields  to be copied into the new row</li>
+  <li>Select the labels(fields)  to be copied into the new row</li>
   <li>Click the 'OK' button at the bottom of the Carry Forward window</li>
   <li>Select the row  to be copied into the new row</li>
   <li>Click  the <img src="../images/AddNewRecord16x16.png" alt="add" width="16" height="16"> button </li>
