--- a/trunk/Specify/help/SpecifyHelp/Workbench/Preferences.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Preferences.html
@@ -6,19 +6,21 @@
 </head>
 
 <body>
-<h2>Setting Preferences</h2>
+<h2>Preferences</h2>
 <hr>
-<p>The Formating</p>
-<p>This preference enables the font and font size to to be adjusted for the user-interface. Changes in the font settings will only be applied to new Data Set Workspaces and will not effect the Sidebar.<br />
-  <img src="../images/PrefsSystem.png" width="580" height="337" /></p>
+<p>The WorkBench allows </p>
+<p>This preference enables the font and font size to to be adjusted for the user-interface. Changes in the font settings will only be applied to new Data Set Workspaces and will not effect the Sidebar.</p><br />
+<p align="center"><img src="../images/PrefsSystem.png"></p>
+<p align="center" class="imgcaption">System Preferences</p>
 <p>System Prefs</p>
 <p>Cache</p>
 <p>The Cache stores images locally so they can easily be displayed. Clearing the cache will recover memory on the disk drive and ensure that the newest image will be downloaded.<br />
 </p>
 <p>Version Checking</p>
-<p>This preference enables you will be notified at start up if there are any updates available for Specify's WorkBench. Turning this off will not effect any other features of the WorkBench.<br />
-  <img src="../images/PrefsFormatting.png" width="587" height="225" /></p>
-<p>Usage Statistics</p>
+<p>This preference enables you will be notified at start up if there are any updates available for Specify's WorkBench. Turning this off will not effect any other features of the WorkBench.</p><br />
+ <p align="center"> <img src="../images/PrefsFormatting.png"></p>
+ <p align="center" class="imgcaption">Formatting Preferences </p>
+ <p>Usage Statistics</p>
 <p>The WorkBench tracks various user actions and sends the Specify engineering team summaries to enable us to make improvements to the 'user experience' in the future. This feature is completely anonymous, the application is unable to track any user or data specific information. It assists us a great deal if this is left enabled.</p>
 <p>&nbsp;</p>
 </body>
